# SDQP

./: CMakeLists.txt
include/sdqp/: sdqp.hpp
test/: sdqp_test.cpp
